--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico">
-    <link rel="stylesheet" href="assets/stylesheets/blueimp-gallery.min.css">
 
     <title>Starter Template for Bootstrap</title>
 
@@ -35,11 +34,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="#">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.autotrader.co.uk" targer="_blank">Autotrader</a></li>
+            <li><a href="http://www.autotrader.co.uk">Autotrader</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -48,51 +47,17 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Contact us!</h1>
+        <p class="lead">We are here to help!</p>
       </div>
 
     </div><!-- /.container -->
-    
-    </div>
-    <!-- Images scroll. Blueimp -->
-    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div id="blueimp-gallery" class="blueimp-gallery">
-        <div class="slides"></div>
-        <h3 class="title"></h3>
-        <a class="prev">‹</a>
-        <a class="next">›</a>
-        <a class="close">×</a>
-        <a class="play-pause"></a>
-        <ol class="indicator"></ol>
-    </div>
-    <!-- The Gallery as lightbox dialog. End. -->
-    <!-- Images -->
-    <div id="links">
-    <a href="assets/images/car1.jpg" title="Car1">
-        <img src="assets/images/car1.jpg" alt="Car1">
-    </a>
-    <a href="assets/images/car2.jpg" title="Car2">
-        <img src="assets/images/car2.jpg" alt="Car2">
-    </a>
-    </div>
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/bootstrap.min.js"></script>
-    <script src="assets/javascripts/blueimp-gallery.min.js"></script>
-    
-    <!-- javascript for lightbox gallery -->
-    <script>
-    document.getElementById('links').onclick = function (event) {
-        event = event || window.event;
-        var target = event.target || event.srcElement,
-            link = target.src ? target.parentNode : target,
-            options = {index: link, event: event},
-            links = this.getElementsByTagName('a');
-        blueimp.Gallery(links, options);
-    };
-    </script>
   </body>
 </html>
