--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -76,9 +76,30 @@
         <img src="assets/images/car2.jpg" alt="Car2">
     </a>
     </div>
+    <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="badge"></span>
+          </button>
+          <a class="navbar-brand" href="#">Made by 'bina, Alex & Neha</a>
+          <a class
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li>Using Java with Play Framework and Bootsrap V3</li>          
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/bootstrap.min.js"></script>
     <script src="assets/javascripts/blueimp-gallery.min.js"></script>
