--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -44,15 +44,6 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
     
     <!-- Images scroll. Blueimp -->
     <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
@@ -68,12 +59,8 @@
     <!-- The Gallery as lightbox dialog. End. -->
     <!-- Images -->
     <div id="links">
-    <a href="assets/images/car1.jpg" title="Car1">
-        <img src="assets/images/car1.jpg" alt="Car1">
-    </a>
-    <a href="assets/images/car2.jpg" title="Car2">
-        <img src="assets/images/car2.jpg" alt="Car2">
-    </a>
+    <a href="assets/images/car1.jpg" title="Car1"> </a>
+    <a href="assets/images/car2.jpg" title="Car2"> </a>
     </div>
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
       <div class="container">
