--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -63,6 +63,11 @@
     <a href="assets/images/car2.jpg" title="Car2"> </a>
     </div>
     
+    <div class="panel panel-success">
+  <div class="panel-body">
+    Score Panel
+  </div>
+    </div>
     
     <!-- Bootstrap core JavaScript
     ================================================== -->
