--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -1,13 +1,10 @@
+<!--Include header-->
 @header()
- 
-     <div class="container">
-
-      <div class="starter-template">
-        <h1>Contact us!</h1>
-        <p class="lead">We are here to help!</p>
-      </div>
-
+	<div class="container">
+	    <div class="starter-template">
+        	<h1>Contact us!</h1>
+        	<p class="lead">We are here to help!</p>
+        </div>
     </div><!-- /.container -->
-
 
 @footer()
