--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,23 +1,35 @@
 <!--Include header-->
-	@header()	
-	    
-    <!-- Images scroll. Blueimp -->
-    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
-        <div class="slides"></div>
-        <h3 class="title"></h3>
-        <a class="prev">‹</a>
-        <a class="next">›</a>
-        <a class="play-pause"></a>
-        <ol class="indicator"></ol>
-    </div>
+@header()	
+	<div class="container">
+		<div class="row">
+			<div class="span7">
+				<!-- Images scroll. Blueimp -->
+    			<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+    			<div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+        			<div class="slides"></div>
+        				<h3 class="title"></h3>
+        				<a class="prev">‹</a>
+        				<a class="next">›</a>
+        				<a class="play-pause"></a>
+        				<ol class="indicator"></ol>
+    				</div>
     
-    <!-- The Gallery as lightbox dialog. End. -->
-    <!-- Images -->
-    <div id="links">
-    <a href="assets/images/car1.jpg" title="Car1"> </a>
-    <a href="assets/images/car2.jpg" title="Car2"> </a>
-    </div>
+    				<!-- The Gallery as lightbox dialog. End. -->
+    				<!-- Images -->
+    				<div id="links">
+    					<a href="assets/images/car1.jpg" title="Car1"> </a>
+    					<a href="assets/images/car2.jpg" title="Car2"> </a>
+    				</div>
+				</div>
+			</div> <!--End span7-->
+			
+			<div class="span4">
+				
+			</div>
+		</div>
+	</div>
+	    
+    
     
     <div class="panel panel-success">
   <div class="panel-body">
