--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../../assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/stylesheets/blueimp-gallery.min.css">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>AutoGuesser</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
