--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,40 +1,35 @@
-@(images: List[String])
+@(images: List[String], price: Int)
     <!--Include header-->
 	@header()	
 	    
     <!-- Images scroll. Blueimp -->
     <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
-        <div class="slides"></div>
-        <h3 class="title"></h3>
-        <a class="prev">‹</a>
-        <a class="next">›</a>
-        <a class="play-pause"></a>
-        <ol class="indicator"></ol>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10">
+                <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+                    <div class="slides"></div>
+                    <h3 class="title"></h3>
+                    <a class="prev">‹</a>
+                    <a class="next">›</a>
+                    <a class="play-pause"></a>
+                    <ol class="indicator"></ol>
+                </div>
+
+                <!-- The Gallery as lightbox dialog. End. -->
+                <!-- Images -->
+                <div id="links">
+                    @for(image <- images) {
+                       <a href="@image" title="Car1"> </a>
+                    }
+                </div>
+            </div>
+            <div class="col-md-2">
+                <h3>test</h3>
+            </div>
+        </div>
     </div>
-    
-    <!-- The Gallery as lightbox dialog. End. -->
-    <!-- Images -->
-    <div id="links">
-    @for(image <- images) {
-       <a href="@image" title="Car1"> </a>
-    }
-    </div>
-    
-    <div class="panel panel-success">
-  <div class="panel-body">
-    Score Panel
-  </div>
-    </div>
-    <div class="row" align="center">
-    	<div class="col-lg-6">
-    	<div class="input-group">
-      	<input type="text" class="form-control" placeholder="Enter price">
-      	<span class="input-group-btn">
-        	<button class="btn btn-default" type="button">Go!</button>
-      	</span>
-    	</div><!-- /input-group -->
-  		</div><!-- /.col-lg-6 -->
-	</div><!-- /.row -->	
+
+
     
 @footer()
