--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,4 +1,20 @@
-  <!-- Bootstrap core JavaScript
+	<footer class="footer-2 bg-midnight-blue">
+		<!--<div class="container">-->
+			<nav class="pull-left">
+				<ul>
+					<li>hi there</li>
+				</ul>
+			</nav>
+			<div class="social-buttons pull right">
+				<a href="#"><div class="fui-vimeo"></div><div class="fui-vimeo"></div></a>
+	        	<a href="#"><div class="fui-facebook"></div><div class="fui-facebook"></div></a>
+	        	<a href="#"><div class="fui-twitter"></div><div class="fui-twitter"></div></a>
+	    	</div>
+		<!--</div>-->
+	</footer>    
+	
+  
+    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -8,7 +24,7 @@
     
     <!-- javascript for lightbox gallery -->
     <script>
-blueimp.Gallery(
+	blueimp.Gallery(
     document.getElementById('links').getElementsByTagName('a'),
     {
         container: '#blueimp-gallery-carousel',
