--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,15 +26,16 @@
     Score Panel
   </div>
     </div>
-    <div class="row" align="center">
-    	<div class="col-lg-6">
-    	<div class="input-group">
-      	<input type="text" class="form-control" placeholder="Enter price">
-      	<span class="input-group-btn">
-        	<button class="btn btn-default" type="button">Go!</button>
-      	</span>
-    	</div><!-- /input-group -->
-  		</div><!-- /.col-lg-6 -->
-	</div><!-- /.row -->	
     
+    <!--Input box-->
+    	<div class="row" align="center">
+    		<div class="col-lg-6">
+    			<div class="input-group">
+      				<input type="text" class="form-control" placeholder="Enter price">
+      				<span class="input-group-btn">
+        				<button class="btn btn-default" type="button">Go!</button>
+      				</span>
+    			</div><!-- /input-group -->
+  			</div><!-- /.col-lg-6 -->
+		</div><!-- /.row -->	
 @footer()
