--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -38,6 +38,7 @@
                           <div class="modal-content">
                               <center><h3>Your guess:</h3></center>
                               <center><h3>Real price:</h3></center>
+                              <center><button type="button" class="btn btn-primary">Buy this car</button></center>
                               <center><button type="button" class="btn btn-primary">Next</button></center>
                           </div>
                         </div>
