--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
     <link href="assets/stylesheets/main.css" rel="stylesheet">
+    <script src="assets/javascripts/main.js"></script>
 
   </head>
 
