--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -29,11 +29,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">AutoGuesser</a>
+          <a class="navbar-brand" href="/">AutoGuesser</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/rules">Rules</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
