--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
                 <form class ="form-inline" role="form">
                     <div class="form-group">
                         <label class="sr-only" for="priceInput">Car price guess</label>
-                        <input style="width: 9em;" type="number" class="form-control input-xsmall" id="price" placeholder="Enter price">
+                        <input style="width: 9em;" type="number" step="100" class="form-control input-xsmall" id="price" placeholder="Enter price">
                     </div>
                     
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-modal-sm">Check!</button>
