try to add current score

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -27,6 +27,7 @@
             </div>
             <div class="col-md-3">
                 <h4>Current Score:</h4>
+                <span id="yourScore"></span>
                 <form class ="form-inline" role="form">
                     <div class="form-group">
                         <label class="sr-only" for="priceInput">Car price guess</label>
@@ -50,16 +51,5 @@
             </div>
         </div>
     </div>
-    
-    <!--Input box-->
-    	<div class="row" align="center">
-    		<div class="col-lg-6">
-    			<div class="input-group">
-      				<input type="text" class="form-control" placeholder="Enter price">
-      				<span class="input-group-btn">
-        				<button class="btn btn-default" type="button">Go!</button>
-      				</span>
-    			</div><!-- /input-group -->
-  			</div><!-- /.col-lg-6 -->
-		</div><!-- /.row -->	
+   	
 @footer()
