--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,17 +1,12 @@
-	<footer class="footer-2 bg-midnight-blue">
-		<!--<div class="container">-->
-			<nav class="pull-left">
-				<ul>
-					<li>hi there</li>
-				</ul>
-			</nav>
-			<div class="social-buttons pull right">
-				<a href="#"><div class="fui-vimeo"></div><div class="fui-vimeo"></div></a>
-	        	<a href="#"><div class="fui-facebook"></div><div class="fui-facebook"></div></a>
-	        	<a href="#"><div class="fui-twitter"></div><div class="fui-twitter"></div></a>
-	    	</div>
-		<!--</div>-->
-	</footer>    
+	<hr>
+	<hr>
+		 <footer>
+            <div class="row">
+                <div class="col-lg-8">
+                    <p>Original Works</p>
+                </div>
+            </div>
+        </footer>   
 	
   
     <!-- Bootstrap core JavaScript
@@ -33,5 +28,7 @@
 );
 </script>
   </body>
+  
+  </div>
 </html>
     
