--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -18,7 +18,7 @@
     <script src="assets/javascripts/main.js"></script>
 
   </head>
-
+<div class="container">
   <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
