--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,30 +4,35 @@
     <div id="advertId" style="display: none;">@advertId</div>
 	    
     <!-- Images scroll. Blueimp -->
-    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-9">
-                <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
-                    <div class="slides"></div>
-                    <h3 class="title"></h3>
-                    <a class="prev">‹</a>
-                    <a class="next">›</a>
-                    <a class="play-pause"></a>
-                    <ol class="indicator"></ol>
-                </div>
-
-                <!-- The Gallery as lightbox dialog. End. -->
-                <!-- Images -->
-                <div id="links">
-                    @for(image <- images) {
-                       <a href="@image" title="Car1"> </a>
-                    }
-                </div>
+<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+    <div class="row">
+        <div class="col-sm-3 col-md-9">
+            <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+                <div class="slides"></div>
+                <h3 class="title"></h3>
+                <a class="prev">‹</a>
+                <a class="next">›</a>
+                <a class="play-pause"></a>
+                <ol class="indicator"></ol>
             </div>
-            <div class="col-md-3">
-                <h4>Current Score:</h4>
-                <span id="yourScore"></span>
+
+            <!-- The Gallery as lightbox dialog. End. -->
+            <!-- Images -->
+            <div id="links">
+                @for(image <- images) {
+                   <a href="@image"> </a>
+                }
+        	</div>
+        </div> <!--End carousel-->
+        
+        <!--Begin scorebaord-->
+        <div class="col-lg-3 col-md-6">
+        	<div class ="thumbnail">
+        		<center><h2>Scoreboard</h2></center>
+        		<hr>
+            	<h3>Current Score:<span id="yourScore"></span></h3>
+                <h3>Round:<span id="roundNumber"></span> /10</h3>
+                
                 <form class ="form-inline" role="form">
                     <div class="form-group">
                         <label class="sr-only" for="priceInput">Car price guess</label>
@@ -35,21 +40,26 @@
                     </div>
                     
                     <a href="#" data-toggle="modal" data-target=".bs-modal-sm">
-                        <button type="button" class="btn btn-primary" id="SubmitPrice" onclick="checkPrice()">Check!</button>
+                    	<button type="button" class="btn btn-primary" id="SubmitPrice" onkeypress="checkPrice()" onclick="checkPrice()">Check!</button>
                     </a>
                     <div class="modal fade bs-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-sm">
-                          <div class="modal-content">
-                              <center><h3>Your guess: <span id="yourGuess"></span></h3></center>
-                              <center><h3>Real price: <span id="realPrice"></span></h3></center>
-                              <center><button type="button" class="btn btn-primary" onclick="viewAdvert()">Buy this car</button></center>
-                              <center><button type="button" class="btn btn-primary" onclick="nextRound()">Next</button></center>
-                          </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+                        	<div class="modal-content">
+                            	<center><h3>Your guess: <span id="yourGuess"></span></h3></center>
+                              	<center><h3>Real price: <span id="realPrice"></span></h3></center>
+                              	<center><button type="button" class="btn btn-primary" onclick="viewAdvert()">Buy this car</button></center>
+                              	<br>
+                              	<center><button type="button" class="btn btn-primary" onclick="nextRound()">Next</button></center>
+                              	<p></p>
+                          	</div>
+                    	</div>
+                	</div>
+            	</form>
+            	<hr>
+            	<center><button type="button" class="btn btn-primary" onclick="viewAdvert()">Buy this car</button>
+            	<button type="button" class="btn btn-primary" onclick="nextRound()">Next</button></center>
+        	</div> <!--End thumbnail-->
+        </div> <!--End scoreboard-->
+    </div><!--End row-->
    	
 @footer()
