Fixed some buttons

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -57,8 +57,10 @@
                     </div>
                 </div>
           <hr>
-            	<center><button type="button" class="btn btn-primary" onclick="viewAdvert()">Buy this car</button>
-            	<button type="button" class="btn btn-primary" onclick="nextRound()">Next</button></center>
+            	<center>
+                    <button type="button" class="btn btn-primary not-visible" onclick="viewAdvert()">Buy this car</button>
+            	    <button type="button" class="btn btn-primary not-visible" onclick="nextRound()">Next</button>
+                </center>
         	</div> <!--End thumbnail-->
         </div> <!--End scoreboard-->
     </div><!--End row-->
