--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,11 +1,10 @@
-	
-		 <footer>
-            <div class="row">
-                <div class="col-lg-2">
-                    <p>Original Works</p>
-                </div>
-            </div>
-        </footer>   
+<footer>
+    <div class="row">
+        <div class="span2">
+            Original Works StudentHack 2014
+        </div>
+    </div>
+</footer>   
 	
   
     <!-- Bootstrap core JavaScript
