--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -9,8 +9,7 @@
                     <small>It's Nice to Meet You!</small>
                 </h1>
                 <p>We're all third year students from the University of Manchester. This hackathon is a break from our third year projects which has been keeping us really busy ;)</p>
-                <img width="200" height="100" src="assets/images/Us.jpg">
-                <div class="caption" class="pull-right">This is us coding it out.</div>
+                
             </div>
 
             <div class="col-lg-12">
@@ -42,18 +41,7 @@
                 <p>I helped 'bina with the front end and set up the MongoDB side of things. For more on things I like, visit this <a href="http://xkcd.com">page.</a></p>
             </div>
         </div>
-
         <hr>
-
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Company 2013</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
-    <!-- /container -->
+    </div> <!-- /container -->
 
 @footer()
