Fixed buttons not disabling

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,7 +33,7 @@
         		<center><h2>Scoreboard</h2></center>
         		<hr>
             	<h3>Current Score:<span id="yourScore"> @player.getTotalScore()</span></h3>
-                <h3>Round:<span id="roundNumber"></span> @player.getNumberOfGames()/10</h3>
+                <h3>Round:<span id="roundNumber"></span> @(player.getNumberOfGames()+1)/10</h3>
             
                 <form class ="form-inline"  onsubmit="return checkPrice()">
                     <div class="form-group">
