--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -13,6 +13,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/blueimp-gallery.min.js"></script>
+    <script src="assets/javascripts/main.js"></script>
 
     
     <!-- javascript for lightbox gallery -->
