--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -38,7 +38,7 @@
                 <h3>Neha
                     <small>I'm the sensible one here</small>
                 </h3>
-                <p>I helped 'bina with the front end and set up the MongoDB side of things. For more on things I like, visit this <a href="http://xkcd.com">page.</a></p>
+                <p>I helped 'bina with the front end and set up the MongoDB side of things. For more on things I like, visit this <a href="https://www.facebook.com/neha.qomp">page.</a></p>
             </div>
         </div>
         <hr>
