--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -3,7 +3,11 @@
 	<div class="container">
 	    <div class="starter-template">
         	<h3>Rules:</h3>
-        	<p class="lead">Guess the price of the given car. Ten cars per game. Scores are out of 10.</p>
+        	<p>Guess the price of the given car.</p>
+                <p>Ten rounds per game, guess the price of one car in one round.</p>
+                <p>Score per round is out of 10.</p>
+                <p>Total score is sum of scores from all rounds.</p>
+                <p>Maximum score of the game is 100.</p>
         </div>
     </div><!-- /.container -->
 <!--Include footer-->
