--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
 
 
             <div class="col-md-3">
-               	<div class ="thumbnail blue">
+               	<div class ="thumbnail" id="scoreBoard">
         		<center><h2>Scoreboard</h2></center>
         		<hr>
             	<h3>Current Score:<span id="yourScore"> @player.getTotalScore()</span></h3>
