--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -1,9 +1,34 @@
+@(display: List[model.Player])
 <!--Include header-->
 @header()
 	<div class="container">
 	    <div class="starter-template">
         	<h3>Rules:</h3>
         	<p class="lead">Guess the price of the given car. Ten cars per game. Scores are out of 10.</p>
+        	<div class="thumbnail">
+        	<h3>Leaderboard</h3>
+        	 <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>First Name</th>
+                  <th>Score</th>
+                </tr>
+              </thead>
+              <tbody>
+              
+                           
+              	@for(i <- 0 to display.size() - 1){
+              		<tr>
+              			<td>@(i+1)</td>
+              			<td>@display.get(i).getName()</td>
+              			<td>@display.get(i).getTotalScore()</td>
+              		</tr>
+              	}
+              </tbody>
+             </table>
+             </div>
+        	
         </div>
     </div><!-- /.container -->
 <!--Include footer-->
