leaderboard_button_added_to_final_form

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -68,6 +68,8 @@
                             <br>
                             <center><button type="button" class="btn btn-primary" onclick="nextRound()">Play Again</button></center>
                             <br>
+                            <center><a href="/rules"><button type="button" class="btn btn-primary">Leaderboard</button></a></center>
+                            <br>
                         </div>
                     </div>
                 </div>
