--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,6 +33,8 @@
         		<center><h2>Scoreboard</h2></center>
         		<hr>
             	<h3>Current Score:<span id="yourScore"> @player.getTotalScore()</span></h3>
+                <a href="https://twitter.com/intent/tweet?button_hashtag=AutoGuesser" class="twitter-hashtag-button" data-text="I have obtained @player.getTotalScore() points on AutoGuesser.com. Can you do better?">Tweet #TwitterStories</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <h3>Round:<span id="roundNumber"></span> @(player.getNumberOfGames()+1)/10</h3>
             
                 <form class ="form-inline"  onsubmit="return checkPrice()">
