--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -1,12 +1,8 @@
-<footer>
-    <div class="row">
-        <div class="span2">
-            Original Works StudentHack 2014
-        </div>
+<div class="fb-like" data-href="https://www.autoguesser.com" data-width="55" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div class="span2">
+        Original Works StudentHack 2014
+        
     </div>
-</footer>   
-	
-  
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -14,6 +10,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/blueimp-gallery.min.js"></script>
     <script src="assets/javascripts/main.js"></script>
+    
 
     
     <!-- javascript for lightbox gallery -->
