--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -51,6 +51,7 @@
                       <div class="modal-content">
                           <center><h3>Your guess: <span id="yourGuess"></span></h3></center>
                           <center><h3>Real price: <span id="realPrice"></span></h3></center>
+                          <center><h3>Score for this round: <span id="roundScore"></span></h3></center>
                           <br>
                           <center><button type="button" class="btn btn-primary" onclick="viewAdvert()">Buy this car</button></center>
                           <br>
